--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -3,7 +3,6 @@
         [dialogText]="dialogText"></app-survey-dialog>
 </div>
 
-
 <div *ngIf="showSaveTemplate">
     <app-survey-dialog (onConfirm)="saveOrUpdateTemplate(templateName)" (onCancel)="closeDialog()"
         [dialogText]="dialogText"></app-survey-dialog>
@@ -316,7 +315,7 @@
                 <mat-icon class="full-icon">cloud_upload
                 </mat-icon>
             </button>
-            <button *ngIf="true" (click)="previewSurvey()" mat-icon-button matTooltip="preview brand matrix"
+            <button *ngIf="true && this.isTemplate != 'true' " (click)="previewSurvey()" mat-icon-button matTooltip="preview brand matrix"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">visibility
                 </mat-icon>
