--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="showDialog"><app-survey-dialog (onConfirm)="confirmAction()" (onCancel)="closeDialog()"
-    [dialogText]="dialogText"></app-survey-dialog>
+        [dialogText]="dialogText"></app-survey-dialog>
 </div>
 <div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
@@ -106,8 +106,8 @@
             <mat-icon class="full-icon">{{iconMenuShow}}</mat-icon>
         </button>
         <div *ngIf="showMatrixMenu">
-            <button (click)="openDialog('undo'); editSingleTableCells = false" class="add-column" matTooltip="undo last change"
-                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <button (click)="openDialog('undo'); editSingleTableCells = false" class="add-column"
+                matTooltip="undo last change" matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
             </button>
             <button (click)="selectedIndex = ''; editSingleTableCells = false" class="add-column" matTooltip="cancel"
@@ -173,132 +173,53 @@
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
-<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag
-    style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: lightgrey 3px solid; overflow: auto;
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: lightgrey 3px solid; overflow: auto;
        max-height: 36rem;
     bottom: -2; ">
 
-<div class="example-handle" cdkDragHandle style="display: flex;
+    <div class="example-handle" cdkDragHandle style="display: flex;
     flex-direction: row;
-    justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor" viewBox="0 0 24 24">
-    <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
-    <path d="M0 0h24v24H0z" fill="none"></path>
-  </svg></div>
+    justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor"
+            viewBox="0 0 24 24">
+            <path
+                d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
+            </path>
+            <path d="M0 0h24v24H0z" fill="none"></path>
+        </svg></div>
 
-    <!-- Cards Test Name-->
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Test Names</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <div style="text-align: center;">
-          <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
-          <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-      </div>
-      <div>
-          <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
-              <mat-label>Copy & Paste TEST NAMES</mat-label>
-              <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder="" (ngModelChange)="upLoadNamesAndRationales(testNamesInput)"></textarea>
-          </mat-form-field>
-          <p style="margin-left: 30px; color: #757575;">
-              Add the names you want to test
-          </p>
-      </div>
-
-      </mat-card-content>
-
-    </mat-card>
-<br>
-  <!-- Cards Criteria-->
+     <!-- Cards Select Ranking-->
      <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Category</mat-card-title>
-      </mat-card-header>
-      <br>
-      <div class="sm-section2-rkScale" >
-        <div class="sm-column-box-rkScale">
-          <mat-form-field appearance="outline" style="width: 40%">
-            <mat-label>Category Name</mat-label>
-            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name" style="font-size: 20px;color: #324395;">
-            <mat-hint>Add a category to the left side</mat-hint>
-          </mat-form-field>
+        <mat-card-header>
+            <mat-card-title>Select Ranking & Criteria
 
-          <mat-form-field appearance="outline" style="width: 40%">
-            <mat-label>Sub category Description</mat-label>
-            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
-                placeholder="Sub category Description" style="font-size: 20px;color: #ee7f25;">
-            <mat-hint>Enter a brief description of the Sub category </mat-hint>
-            <!-- Hint text for Category Description -->
-        </mat-form-field>
-        </div>
-<br>
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="sm-section3-rkScale">
 
-          <div class="sm-row-box-rkScale">
-            <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+                <div class="sm-row-box-rkScale">
+                    <div *ngIf="this.bmxItem.componentSettings[0].rankType !='dragAndDrop'">
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
+                        <br>
+                        <div
+                            style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
 
-            <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox>
-          </div>
-          <div class="sm-row-box-rkScale">
-            <div>
-                <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
-                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;"> Minimum:
-                        {{bmxItem.componentSettings[0].minRule}}</div>
-                    <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
-                        style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
-                </div>
-                <div style="font-size: 13px;color: #48535e;">Min number of selections to vote on</div>
-            </div>
-            <div>
-                <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;"> Maximun:
-                        {{bmxItem.componentSettings[0].maxRule}}</div>
-                    <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
-                        style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
-                </div>
-                <div style="font-size: 13px;color: #48535e;">Max number of selections to vote on</div>
-            </div>
-        </div>
-      </div>
-      <mat-card-content>
-
-      </mat-card-content>
-
-    </mat-card>
-<br>
-   <!-- Cards Select Ranking-->
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Select Ranking & Criteria
-
-        </mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <div class="sm-section3-rkScale">
-
-
-
-          <div class="sm-row-box-rkScale">
-            <div>
-              <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
-              <br>
-              <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-
-                  <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0" max="10">
-                  {{rankingScaleValue}}
-              </div>
-          </div>
-          <div style="    margin-top: 0.5rem;
-        ">
-              <mat-radio-group aria-label="Select an option" [(ngModel)]="this.bmxItem.componentSettings[0].rankType"
-              (change)="rankingTableType(this.bmxItem.componentSettings[0].rankType)">
-              <div style="display: flex;flex-direction: column;gap: 1px;">
-                  <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
-                  <mat-radio-button value="dragAndDrop">Drag & Drop</mat-radio-button>
-                  <mat-radio-button value="radio">Radio Butons</mat-radio-button>
-              </div>
-          </mat-radio-group>
-          </div>
-              <!-- <select>
+                            <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
+                                [max]="this.rowsCount">
+                            {{rankingScaleValue}}
+                        </div>
+                    </div>
+                    <div style="margin-top: 0.5rem;">
+                        <mat-radio-group aria-label="Select an option"[(ngModel)]="this.bmxItem.componentSettings[0].rankType"
+                            (change)="rankingTableType(this.bmxItem.componentSettings[0].rankType)">
+                            <div style="display: flex;flex-direction: column;gap: 1px;">
+                                <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
+                                <mat-radio-button value="dragAndDrop">Drag & Drop</mat-radio-button>
+                                <mat-radio-button value="radio">Radio Butons</mat-radio-button>
+                            </div>
+                        </mat-radio-group>
+                    </div>
+                    <!-- <select>
                   <option value="">
                       <mat-icon style="color:#e6ad11;">rectangle</mat-icon>
                   </option>
@@ -309,24 +230,114 @@
                       <mat-icon style="color:#e6ad11;">rectangle</mat-icon>
                   </option>
               </select> -->
-          </div>
-          </div>
-      </mat-card-content>
+                </div>
+            </div>
+        </mat-card-content>
 
     </mat-card>
+        
+    <br>
+    <!-- Cards Test Name-->
+    <mat-card class="example-card">
+        <mat-card-header>
+            <mat-card-title>Test Names</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div style="text-align: center;">
+                <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
+                <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
+            </div>
+            <div>
+                <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
+                    <mat-label>Copy & Paste TEST NAMES</mat-label>
+                    <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""
+                        (ngModelChange)="upLoadNamesAndRationales(testNamesInput)"></textarea>
+                </mat-form-field>
+                <p style="margin-left: 30px; color: #757575;">
+                    Add the names you want to test
+                </p>
+            </div>
+
+        </mat-card-content>
+
+    </mat-card>
+ 
+    <br>
+    <!-- Cards Criteria-->
+    <mat-card class="example-card">
+        <mat-card-header>
+            <mat-card-title>Category</mat-card-title>
+        </mat-card-header>
+        <br>
+        <div class="sm-section2-rkScale">
+            <div class="sm-column-box-rkScale">
+                <mat-form-field appearance="outline" style="width: 40%">
+                    <mat-label>Category Name</mat-label>
+                    <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name"
+                        style="font-size: 20px;color: #324395;">
+                    <mat-hint>Add a category to the left side</mat-hint>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline" style="width: 40%">
+                    <mat-label>Sub category Description</mat-label>
+                    <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
+                        placeholder="Sub category Description" style="font-size: 20px;color: #ee7f25;">
+                    <mat-hint>Enter a brief description of the Sub category </mat-hint>
+                    <!-- Hint text for Category Description -->
+                </mat-form-field>
+            </div>
+            <br>
+
+            <div class="sm-row-box-rkScale">
+                <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+
+                <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox>
+            </div>
+            <div class="sm-row-box-rkScale" *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop'">
+                <div>
+                    <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;"> Minimum:
+                            {{bmxItem.componentSettings[0].minRule}}
+                        </div>
+                        <input type="number" min="0" [max]="rowsCount"
+                            [(ngModel)]="bmxItem.componentSettings[0].minRule" style="width:53px; padding: 0px 10px;"
+                            [value]="bmxItem.componentSettings[0].minRule">
+                    </div>
+                    <div style="font-size: 13px;color: #48535e;">Min number of selections to vote on</div>
+                </div>
+                <div>
+                    <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;"> Maximun:
+                            {{bmxItem.componentSettings[0].maxRule}}
+                        </div>
+                        <input type="number" min="0" [max]="rowsCount"
+                            [(ngModel)]="bmxItem.componentSettings[0].maxRule" style="width:53px; padding: 0px 10px;"
+                            [value]="bmxItem.componentSettings[0].maxRule">
+                    </div>
+                    <div style="font-size: 13px;color: #48535e;">Max number of selections to vote on</div>
+                </div>
+            </div>
+        </div>
+        <mat-card-content>
+
+        </mat-card-content>
+
+    </mat-card>
+    <br>
+  
 
     <!-- BUTTON-->
     <div class="sm-row-box-rkScale">
-      <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
-          aria-label="ranking">
-          <mat-icon>cancel</mat-icon><br>Cancel
-      </button>
-      <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
-          (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
-          aria-label="ranking">
-          <mat-icon>check_circle</mat-icon><br> Done
-      </button>
-  </div>
+        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
+            aria-label="ranking">
+            <mat-icon>cancel</mat-icon><br>Cancel
+        </button>
+        <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
+            (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
+            aria-label="ranking">
+            <mat-icon>check_circle</mat-icon><br> Done
+        </button>
+    </div>
 </div>
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 
@@ -628,7 +639,7 @@
                             style="text-align: center;padding: 10px 4px;">{{(testName[columnName])}}</p> -->
                         <div style="display: flex;align-items: center;justify-content: space-evenly;">
                             <mat-icon
-                                style="cursor: pointer;position: absolute;left: 20px;color: #324395;margin-top: -10px;"
+                                style="cursor: pointer;position: absolute;left: 60px;color: #324395;margin-top: -10px;"
                                 (click)="playTestNameSound(testName[columnName])" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('nameCandidates') == true) &&
                                      displaySound">
                                 volume_up
