--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -43,7 +43,7 @@
           style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;margin-top: 10px;">
           Welcome {{userFullName}}
           <br>
-          Role: {{userRole}} <span style="font-size: 10px;">v 1.0.4</span>
+          Role: {{userRole}} <span style="font-size: 10px;">v 1.0.5</span>
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
           style="justify-content: flex-start;" (click)="navigateTo('project-information')">
           <i class="bi bi-pencil-fill"></i> Create/Edit Matrix
           <div>
-            <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
+            <button (click)="CREATION_VIDEO_PATH='assets/videos/projectCreation.mp4' ; showCreationModalVideo=true; "
               class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
               aria-label="ranking">
               <mat-icon style="font-size: 26px; color: white; " class="full-icon">video_library</mat-icon>
@@ -76,6 +76,13 @@
       </div> -->
       <div class="menu-item-Dark directionProjectList"   [ngClass]="{'menu-item-Light': selectedMenuItem === 'templates', 'menu-item-Dark': selectedMenuItem !== 'templates'}"(click)="navigateTo('templates')">
         <i class="bi bi-list-task"></i>Templates
+        <div class="video-container">
+          <button (click)="CREATION_VIDEO_PATH='assets/videos/templates.mp4' ; showCreationModalVideo=true; "
+            class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
+            aria-label="ranking">
+            <mat-icon style="font-size: 26px; color: white; margin-left: 55px; " class="full-icon">video_library</mat-icon>
+          </button>
+        </div>
       </div>
       </div>
 
@@ -94,7 +101,7 @@
           style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;margin-top: 10px;">
           Welcome {{userFullName}}
           <br>
-          Role: {{userRole}} <span style="font-size: 10px;">v 1.0.4</span>
+          Role: {{userRole}} <span style="font-size: 10px;">v 1.0.5</span>
         </div>
       </div>
     </div>
@@ -131,7 +138,7 @@
           [ngClass]="{'menu-item-Light': selectedMenuItem === 'participants-emails', 'menu-item-Dark': selectedMenuItem !== 'participants-emails'}"
           (click)="navigateTo('participants-emails')">
           Survey Participants/Email <div>
-            <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
+            <button (click)="CREATION_VIDEO_PATH='assets/videos/emails.mp4' ; showCreationModalVideo=true; "
               class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
               aria-label="ranking">
               <mat-icon style="font-size: 26px; color: white; " class="full-icon">video_library</mat-icon>
@@ -142,7 +149,7 @@
           [ngClass]="{'menu-item-Light': selectedMenuItem === 'reports', 'menu-item-Dark': selectedMenuItem !== 'reports'}"
           (click)="navigateTo('reports')">
           Reports <div>
-            <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
+            <button (click)="CREATION_VIDEO_PATH='assets/videos/reports - copia.mp4' ; showCreationModalVideo=true; "
               class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
               aria-label="ranking">
               <mat-icon style="font-size: 26px; color: white; " class="full-icon">video_library</mat-icon>
