--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -5,8 +5,7 @@
     </button>
     <label class="selectLabels">{{selectedDisplayName}}</label>
     <label class="selectLabels">Change template name</label>
-    <div
-        style="width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; overflow-x: auto;">
+    <div style="width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; overflow-x: auto;">
         <mat-form-field appearance="outline">
             <input type="text" placeholder="Enter a new name" matInput [(ngModel)]="newTemplateName">
         </mat-form-field>
@@ -14,18 +13,20 @@
     </div>
     <button mat-raised-button color="success" style=" background-color: #063074; color: white; width: 40%;;" (click)="saveNewName()">Save </button>
 </div>
-
-<button mat-raised-button color="success" style=" background-color: #063074;color: white;width: 140px;position: relative;top: 2%;left: 85%;" (click)=" showNewTemplateModal = true">Add template
-</button>
-
+<div style="position: relative; top: 10px">
+    <mat-form-field style="padding-right: 20px" appearance="outline">
+        <mat-label>Search</mat-label>
+        <input matInput (keyup)="applyFilter($event.target.value)" value="" placeholder="Search Project">
+    </mat-form-field>
+    <button mat-raised-button color="success" style=" background-color: #063074;color: white;width: 140px;position: relative;left: 65%;" (click)=" showNewTemplateModal = true">Add template</button>    
+</div>
 
 <div *ngIf="showNewTemplateModal" class="modal-content" style="gap: 10px;">
     <button mat-icon-button class="close-button" aria-label="Close" (click)="closeModal()">
         <mat-icon>close</mat-icon>
     </button>
 
-    <div *ngIf="!existingTemplate && !newTemplate"
-        style="width: 100%; display: flex; flex-direction: column; gap: 15px">
+    <div *ngIf="!existingTemplate && !newTemplate" style="width: 100%; display: flex; flex-direction: column; gap: 15px">
         <div style="display: flex; align-items: center; gap:unset 15px;  justify-content: space-between;">
             Create a new empty template <button mat-raised-button color="success" style=" background-color: #063074;
             color: white;
@@ -38,16 +39,12 @@
         </div>
     </div>
 
-    <div *ngIf="existingTemplate" style="display: flex;
-    flex-direction: column;
-    align-items: center;">
+    <div *ngIf="existingTemplate" style="display: flex; flex-direction: column;align-items: center;">
         <label class="selectLabels">New template name</label>
-        <div
-            style="width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; overflow-x: auto;">
+        <div style="width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; overflow-x: auto;">
             <mat-form-field appearance="outline">
                 <input type="text" placeholder="Enter a new name" matInput [(ngModel)]="newTemplateName">
             </mat-form-field>
-
         </div>
         <p style="text-align: center;color: grey;" *ngIf="templateName.length == 0">select one to load or update</p>
         <mat-form-field appearance="outline">
@@ -58,39 +55,26 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <div *ngIf="templateName.length > 3"
-            style="display: flex;flex-direction: row;justify-content: space-evenly; width: 300px;">
+        <div *ngIf="templateName.length > 3" style="display: flex;flex-direction: row;justify-content: space-evenly; width: 300px;">
             <button *ngIf="isSaveOrUpdate" (click)="saveTemplateFromAnExistingOne(selectedTemplateName)"
                 mat-raised-button style="color: white;background-color: #8a2a5a ">
                 load
             </button>
-
-
         </div>
-        <button mat-raised-button color="success" style=" background-color: #063074;
-     color: white;
-    width: 40%;;" (click)="saveTemplateFromAnExistingOne(selectedTemplateName)">Save </button>
+        <button mat-raised-button color="success" style=" background-color: #063074;color: white; width: 40%;;" (click)="saveTemplateFromAnExistingOne(selectedTemplateName)">Save </button>
     </div>
 
-    <div *ngIf="newTemplate" style="display: flex;
-    flex-direction: column;
-    align-items: center;">
+    <div *ngIf="newTemplate" style="display: flex;flex-direction: column;align-items: center;">
 
         <label class="selectLabels">New template name</label>
-        <div
-            style="width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; overflow-x: auto;">
+        <div style="width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; overflow-x: auto;">
             <mat-form-field appearance="outline">
                 <input type="text" placeholder="Enter a new name" matInput [(ngModel)]="newTemplateName">
             </mat-form-field>
-
         </div>
-        <button mat-raised-button color="success" style=" background-color: #063074;
-  color: white;
-  width: 40%;;" (click)="saveNewName(true)">Save </button>
+        <button mat-raised-button color="success" style=" background-color: #063074;color: white;width: 40%;" (click)="saveNewName(true)">Save </button>
     </div>
-
 </div>
-
 
 <div style="position: relative;top: 5%;">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 100%;">
@@ -100,7 +84,7 @@
             <td mat-cell *matCellDef="let element">{{ element.index }}</td>
         </ng-container>
         <ng-container matColumnDef="displayName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Template name</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Template Name</th>
             <td mat-cell *matCellDef="let element"> {{element.displayName}} </td>
         </ng-container>
         <ng-container matColumnDef="TemplateName">
@@ -147,7 +131,3 @@
     <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
 
 </div>
-
-
-
-<!--   📆📆📆📆📆📆📆📆📆 END CALENDAR-->
