--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -190,7 +190,7 @@
      <!-- Cards Select Ranking-->
      <mat-card class="example-card">
         <mat-card-header>
-            <mat-card-title>Select Ranking & Criteria
+            <mat-card-title>Select Ranking
 
             </mat-card-title>
         </mat-card-header>
@@ -235,7 +235,7 @@
         </mat-card-content>
 
     </mat-card>
-        
+
     <br>
     <!-- Cards Test Name-->
     <mat-card class="example-card">
@@ -261,7 +261,7 @@
         </mat-card-content>
 
     </mat-card>
- 
+
     <br>
     <!-- Cards Criteria-->
     <mat-card class="example-card">
@@ -291,7 +291,7 @@
             <div class="sm-row-box-rkScale">
                 <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
 
-                <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox>
+                <!-- <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox> -->
             </div>
             <div class="sm-row-box-rkScale" *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop'">
                 <div>
@@ -324,7 +324,7 @@
 
     </mat-card>
     <br>
-  
+
 
     <!-- BUTTON-->
     <div class="sm-row-box-rkScale">
