--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -198,7 +198,7 @@
             <div class="sm-section3-rkScale">
 
                 <div class="sm-row-box-rkScale">
-                
+
                     <div style="margin-top: 0.5rem;">
                         <mat-radio-group aria-label="Select an option"
                             [(ngModel)]="this.bmxItem.componentSettings[0].rankType"
@@ -276,7 +276,7 @@
                             {{rankingScaleValue}}
                         </div>
                     </div>
-               
+
                     <!-- <select>
                   <option value="">
                       <mat-icon style="color:#e6ad11;">rectangle</mat-icon>
@@ -325,7 +325,8 @@
 
                 <!-- <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox> -->
             </div>
-            <div class="sm-row-box-rkScale" *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop'">
+            <div class="sm-row-box-rkScale"
+                *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop' && this.bmxItem.componentSettings[0].rankType != 'dropDown'">
                 <div>
                     <div
                         style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
@@ -395,7 +396,7 @@
     <div class="scroller-style main-container" cdkDropList (cdkDropListDropped)="checkDragEvetn($event)"
         [cdkDropListAutoScrollDisabled]="false" [cdkDropListLockAxis]="'y'"
         [dragula]="(dragRows)?'DRAGGABLE_ROW':(rankingType == 'dragAndDrop')?draggableBag:''"
-        [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);">
+        [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);" *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'">
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index" cdkDrag>
 
@@ -547,6 +548,176 @@
                             </mat-icon>
                             <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true)
                                     &&  columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
+                                [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                                [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':(columnName == 'nameCandidates')?100 +'%':bmxItem.componentSettings[0].rationalewidth + 'px'"
+                                style="text-align: center;margin: 0 0 0px;padding: 4px"
+                                [innerHTML]="testName[columnName] | safe: 'html'">{{testName[columnName]}}
+                            </p>
+                        </div>
+                    </div>
+                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                </div>
+                <div *ngIf="(y !== 0) && bmxClientPageOverview && deleteRows"
+                    style="min-width: 100px; position: absolute;right: 0px;">
+                    <button style="outline: none;margin:3px -8px;" (dblclick)="deletRow(y)" mat-icon-button
+                        matTooltip="double click to delete row" matTooltipPosition="left" aria-label="ranking">
+                        <mat-icon>delete_outline</mat-icon>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="scroller-style main-container"  *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop'">
+
+        <div *ngFor="let testName of bmxItem.componentText; let y = index">
+
+            <div class="test-name-table">
+
+                <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ RANK RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
+                <div [ngClass]="(this.bmxItem.componentSettings[0].rankType == 'dragAndDrop')?'rank-column':
+                            (this.bmxItem.componentSettings[0].rankType == 'dropDown')?'rank-column1':'rank-column1'"
+                    [style.width]="bmxItem.componentSettings[0].rateWidth + 'px'">
+                    <div *ngIf="(y !== 0)">
+                        <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DROP DOWN ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
+                        <mat-form-field *ngIf="this.bmxItem.componentSettings[0].rankType == 'dropDown'"
+                            appearance="outline" style="width: 110px;padding-top: 13px;height: 80px;">
+                            <mat-label>Rank 1 to {{rankingScaleValue}}</mat-label>
+                            <mat-select matNativeControl [(ngModel)]="bmxItem.componentText[y].RATE"
+                                (selectionChange)="setRating(bmxItem.componentText[y].RATE,y)">
+                                <mat-option *ngFor="let star of  testName.STARS; let x =  index" [value]="star.icon">
+                                    {{star.icon}}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+
+
+                        <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DRAG AND DROP ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
+                        <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" mat-button style="background-color:#ee7f25 ;color: white;
+                        animation: rubberBand 700ms ease-in  forwards;">{{y}}</button>
+
+
+                        <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ RADIO ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
+                        <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y);"
+                            *ngIf="this.bmxItem.componentText[y].RATE > 0 && this.bmxItem.componentSettings[0].rankType == 'radio'"
+                            mat-button style="background-color:#ee7f25 ;color: white;
+                        animation: rubberBand 700ms ease-in  forwards;">{{this.bmxItem.componentText[y].RATE}}</button>
+
+                        <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
+                        <div style="display: flex;">
+                            <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)" *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 &&
+                            this.bmxItem.componentSettings[0].rankType == 'dropDown'" style="background-color: #ee7f25;
+                                color: white;
+                                min-width: 20px;
+                                line-height: 19px;
+                                padding: 2px 0px;
+                                margin: -45px 10px;
+                                position: absolute;
+                                animation: rubberBand 700ms ease-in  forwards;"
+                                mat-button>{{bmxItem.componentText[y]['RATE']}}</button>
+                        </div>
+                        <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
+                    </div>
+                    <!-- COLUMN HEADER -->
+                    <textarea *ngIf="y == 0 && editSingleTableCells"
+                        [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                        style="text-align: center; font-weight: bold;color: #324395;min-width: 200px;" class="row-box"
+                        [(ngModel)]="bmxItem.componentSettings[0].ratingScaleTitle"
+                        value="bmxItem.componentSettings[0].ratingScaleTitle">
+                </textarea>
+                    <div class="rating-text" *ngIf="y == 0 && !editSingleTableCells">
+                        {{bmxItem.componentSettings[0].ratingScaleTitle}}
+                    </div>
+                </div>
+                <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ RANK STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
+
+                <div *ngFor="let columnName of columnsNames; let e =  index"
+                    style="display: flex;align-items: center;justify-content: center;" [ngClass]="(e%2==0)?'red':'blue'"
+                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
+                (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
+                (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
+                (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
+                (columnName.includes('RadioColumn'))?bmxItem.componentSettings[0].radioColumnsWidth + 'px' :
+                bmxItem.componentSettings[0].columnWidth + 'px'">
+
+                    <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+
+                    <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e">
+                        <div>
+                            <textarea *ngIf="editSingleTableCells"
+                                [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                                style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
+                                [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea>
+
+                            <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;padding:5px 1px"
+                                [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                                *ngIf=" !editSingleTableCells">{{testName[columnName]}}
+                            </p>
+                        </div>
+                        <div *ngIf="selectedColumn === e && bmxClientPageOverview && !editSingleTableCells" style="display: flex;flex-direction: row;justify-content: space-around;
+                        position: absolute;top: 35px;background: white;border: #324395 dashed 1px;"
+                            (mouseleave)="selectedColumn = ''">
+                            <span class="header-delete-icon" matTooltip="double click to delete column"
+                                matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
+                            <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
+
+                            <mat-icon style="cursor: pointer;" (click)="columnFontSizeAdjust(columnName, 'decrease')">
+                                remove</mat-icon>
+
+                            <mat-icon style="cursor: pointer;">text_format</mat-icon>
+
+                            <mat-icon style="cursor: pointer;" (click)="columnFontSizeAdjust(columnName, 'increase')">
+                                add</mat-icon>
+                        </div>
+                    </div>
+
+                    <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+
+
+                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                    <div>
+
+                        <!-- IF ELSE TEMPLATE INPUTS  -- BELOW RADION BUTTONS COLUMN -->
+                        <input type="radio" *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true"
+                            [name]="columnName + i" [checked]="testName[columnName]"
+                            (click)="saveRadioColumValue(columnName, y)">
+
+
+                        <!-- TEXT_AREA COLUMN COMMENTS-->
+                        <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true "
+                            [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) +'px'"
+                            [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
+                            [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
+                            style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid #dddddd;"
+                            class="row-box" [(ngModel)]="testName[columnName]"></textarea>
+
+                        <img class="row-box" style="width:300px;" [src]="testName[columnName]" *ngIf=" bmxItem.componentSettings[1].isImageType && (y !== 0) && (columnName == 'name' ||
+                         columnName == 'nameCandidates')">
+
+
+                        <!-- TEXT AREA TO EDIT TABLE CELL CONTENT -->
+                        <textarea *ngIf="y !== 0  && editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+                   columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
+                            [style.width]="(columnName == 'rationale')?(bmxItem.componentSettings[0].rationalewidth - 10) + 'px':(bmxItem.componentSettings[0].columnWidth -10) +'px'"
+                            [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
+                            [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
+                            style="outline: none;text-align: center;margin: 0 10px;" class="row-box"
+                            [(ngModel)]="testName[columnName]"></textarea>
+
+                        <!-- <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+                      columnName.includes('Comments') != true &&  columnName.includes('RATE') != true &&
+                       ((columnName.includes('name') != true)||!bmxItem.componentSettings[1].isImageType)"
+                        [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                        [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
+                        style="text-align: center;margin: 0 0 0px;"
+                        [innerHTML]="testName[columnName] | safe: 'html'">{{testName[columnName]}}</p> -->
+
+                        <div style="display: flex;">
+                            <mat-icon style="cursor: pointer;color: #324395;"
+                                (click)="playTestNameSound(testName[columnName])"
+                                *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('nameCandidates') == true) && displaySound">
+                                volume_up
+                            </mat-icon>
+                            <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true)
+                                &&  columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
                                 [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                 [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':(columnName == 'nameCandidates')?100 +'%':bmxItem.componentSettings[0].rationalewidth + 'px'"
                                 style="text-align: center;margin: 0 0 0px;padding: 4px"
