--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -124,6 +124,7 @@
     width: 100%;
     overflow-y: scroll;
     @include BoxShadow(2);
+    padding-bottom: 8%;
 }
 
 .bmx-page::-webkit-scrollbar {
