--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -239,6 +239,7 @@
         overflow-y: scroll;
         overflow-x: hidden;
         @include BoxShadow(2);
+        padding-bottom: 8%;
     }
     .display {
         display: flex;
