--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -228,7 +228,7 @@
       </div>
           <br>
 
-          <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+          <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Questions</mat-checkbox>
 
       </div>
       <mat-card-content>
